--- a/style.css
+++ b/style.css
@@ -55,3 +55,10 @@ body{
     background-color: var(--bgColor);
     color: var(--accentColor);
 }
+
+#picture{
+    max-width: 675px;
+    width: auto;
+    display: block;
+    margin: 27px auto; 
+}
