--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Style Settings */
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 :root {
-    --bgColor: #2b7fa2;
+    --bgColor: #1C7D9E;
     --accentColor: white;
     --font: 'Source Sans Pro', sans-serif;
 }
