--- a/style.css
+++ b/style.css
@@ -11,9 +11,11 @@ body{
 }
 
 #userPhoto{
-    width: 82px;
-    height: 145px;
+    width: 96px;
+    height: 96px;
     display: block;
+    margin: 35px auto 20px;
+    border-radius: 50%;
 }
 
 #userName{
